testdata/baselines/reference/submodule/compiler/jsFileCompilationSyntaxError.errors.txt
a.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (1 errors) ====
    /**
      * @type {number}
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
      * @type {string}
      */
    var v;
    